--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
+    <!-- Standard ICO -->
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icons/network_logo.ico') }}">
+
+    <!-- SVG Favicon -->
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/network_logo.svg') }}">
+
+    <!-- PNG Fallbacks -->
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='icons/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="48x48" href="{{ url_for('static', filename='icons/favicon-48x48.png') }}">
+    <link rel="icon" type="image/png" sizes="64x64" href="{{ url_for('static', filename='icons/favicon-64x64.png') }}">
+    <link rel="icon" type="image/png" sizes="120x120"
+        href="{{ url_for('static', filename='icons/favicon-120x120.png') }}">
+    <link rel="icon" type="image/png" sizes="128x128"
+        href="{{ url_for('static', filename='icons/favicon-128x128.png') }}">
+
     {% block head %}{% endblock %}
 </head>
 
@@ -19,6 +38,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{{ url_for('static', filename='js/sidebar.js') }}"></script>
     <meta name="csrf-token" content="{{ csrf_token() }}">
     {% block scripts %}{% endblock %}
 </body>
