moved logo icons to static/icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,10 +11,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/sidebar.css') }}">
     <!-- Standard ICO -->
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icons/network_logo.ico') }}">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='icons/rntlogo.ico') }}">
 
     <!-- SVG Favicon -->
-    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/network_logo.svg') }}">
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='icons/rntlogo.svg') }}">
 
     <!-- PNG Fallbacks -->
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='icons/favicon-16x16.png') }}">
