--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -7,7 +7,7 @@
     <!-- Sidebar Header -->
     <header class="sidebar-header">
         <a href="#" class="header-logo">
-            <img src="{{ url_for('static', filename='rntlogo.png') }}" alt="Roger's Network Tools">
+            <img src="{{ url_for('static', filename='icons/rntlogo.png') }}" alt="Roger's Network Tools">
         </a>
         <button class="sidebar-toggler">
             <span class="material-symbols-rounded">chevron_left</span>
