rename menu item for Tests

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -33,13 +33,13 @@
             <li class="sb-nav-item sb-dropdown-container">
                 <a href="#" class="sb-nav-link sb-dropdown-toggle">
                     <span class="material-symbols-rounded">add_task</span>
-                    <span class="sb-nav-label">Create Tests</span>
+                    <span class="sb-nav-label">Manage Tests</span>
                     <span class="sb-dropdown-icon material-symbols-rounded">keyboard_arrow_down</span>
                 </a>
                 <!-- Dropdown Menu -->
                 <ul class="sb-dropdown-menu">
                     <li class="sb-nav-item">
-                        <a class="sb-nav-link sb-dropdown-title">Create Tests</a>
+                        <a class="sb-nav-link sb-dropdown-title">Manage Tests</a>
                     </li>
                     <li class="sb-nav-item">
                         <a href="{{ url_for('showtests_bgpaspath') }}" class="sb-nav-link sb-dropdown-link">BGP
