--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -22,7 +22,7 @@
             <td>
                 <button class="delete-credential" data-id="{{ credential.id }}"
                     style="background: none; border: none; padding: 0;">
-                    <i class="fas fa-trash-alt"></i>
+                    <span class="material-symbols-rounded" title="Click to delete">delete</span>
                 </button>
             </td>
         </tr>
