--- a/templates/showtests_itraceroute.html
+++ b/templates/showtests_itraceroute.html
@@ -4,7 +4,7 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" rel="stylesheet" />
 {% endblock %}
 {% block content %}
-<h1>ACI itraceroute Tests</h1>
+<h1>ACI iTraceroute Tests</h1>
 <table class="table">
     <thead>
         <tr>
@@ -15,6 +15,7 @@
             <th>itraceroute vrf</th>
             <th>itraceroute encap vlan</th>
             <th>Description of Test</th>
+            <th>Remove</th>
         </tr>
     </thead>
     <tbody>
@@ -29,7 +30,7 @@
             <td>{{ test.description }} </td>
             <td>
                 <button class="delete-test" data-id="{{ test.id }}" style="background: none; border: none; padding: 0;">
-                    <i class="fas fa-trash-alt"></i>
+                    <span class="material-symbols-rounded" title="Click to delete">delete</span>
                 </button>
             </td>
         </tr>
