--- a/templates/showtests_traceroute.html
+++ b/templates/showtests_traceroute.html
@@ -12,6 +12,7 @@
             <th>Traceroute source device</th>
             <th>Traceroute destination IP</th>
             <th>Description of Test</th>
+            <th>Remove</th>
         </tr>
     </thead>
     <tbody>
@@ -23,7 +24,7 @@
             <td>{{ test.description }} </td>
             <td>
                 <button class="delete-test" data-id="{{ test.id }}" style="background: none; border: none; padding: 0;">
-                    <i class="fas fa-trash-alt"></i>
+                    <span class="material-symbols-rounded" title="Click to delete">delete</span>
                 </button>
             </td>
         </tr>
