--- a/templates/test_results_filtered.html
+++ b/templates/test_results_filtered.html
@@ -4,7 +4,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 {% endblock %}
 {% block content %}
-<div class="container mt-4">
+<div>
     <h1>Results: {{ run_description }}</h1>
     {% if run_timestamp is not none and run_endtimestamp is not none %}
     <p class="text-muted">Tests Start: {{ run_timestamp.strftime('%Y-%m-%d %H:%M:%S') }}</p>
