added Add User option to Settings sub-menu

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -129,6 +129,9 @@
                         <a href="{{ url_for('credentials') }}" class="sb-nav-link sb-dropdown-link">Device
                             Credentials</a>
                     </li>
+                    <li class="sb-nav-item">
+                        <a href="{{ url_for('create_user') }}" class="sb-nav-link sb-dropdown-link">Add User</a>
+                    </li>
                 </ul>
             </li>
             <li class="sb-nav-item">
