start with sidebar collapsed (regardless of screen size)

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -3,7 +3,7 @@
     <span class="material-symbols-rounded">menu</span>
 </button>
 
-<aside class="sidebar">
+<aside class="sidebar collapsed">
     <!-- Sidebar Header -->
     <header class="sidebar-header">
         <a href="#" class="header-logo">
