remove password visibility toggle from password input

--- a/templates/credentials.html
+++ b/templates/credentials.html
@@ -46,9 +46,8 @@
     </div>
 
     <div class="mb-3 position-relative">
-        <label for="pw" class="form-label">Password<button type="button"
-                class="btn btn-outline-secondary toggle-password" style="border: none;">
-                <i class="bi bi-eye"></i>
+        <label for="pw" class="form-label">Password<button type="button" class="btn btn-outline-secondary"
+                style="border: none;">
             </button></label>
         <input type="password" class="form-control w-25 me-2" id="password" name="password" required>
     </div>
@@ -89,18 +88,6 @@
                     alert('Error adding credentials');
                 }
             });
-        });
-        // Toggle password visibility
-        $('.toggle-password').click(function () {
-            const passwordInput = $('#pw');
-            const icon = $(this).find('i');
-            if (passwordInput.attr('type') === 'password') {
-                passwordInput.attr('type', 'text');
-                icon.removeClass('bi-eye').addClass('bi-eye-slash');
-            } else {
-                passwordInput.attr('type', 'password');
-                icon.removeClass('bi-eye-slash').addClass('bi-eye');
-            }
         });
 
         // Delete credential
