add nav url to newly created route for Compare Results

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -95,13 +95,13 @@
                 </ul>
             </li>
             <li class="sb-nav-item">
-                <a href="#compare-results" class="sb-nav-link">
+                <a href="{{ url_for('compare_test_runs_picker') }}" class="sb-nav-link">
                     <span class="material-symbols-rounded">text_compare</span>
                     <span class="sb-nav-label">Compare Results</span>
                 </a>
                 <ul class="sb-dropdown-menu">
                     <li class="sb-nav-item">
-                        <a href="#compare-results" class="sb-nav-link">
+                        <a href="{{ url_for('compare_test_runs_picker') }}" class="sb-nav-link">
                             <span class="sb-dropdown-title">Compare Results</a>
                         </a>
                     </li>
