--- a/templates/compare_test_runs_picker.html
+++ b/templates/compare_test_runs_picker.html
@@ -35,9 +35,16 @@
             {% endif %}
         </div>
 
-        <div class="ctrp-form-actions">
-            {{ form.compare_type_x(class="btn btn-primary") }}
-            {{ form.compare_type_y(class="btn btn-primary") }}
+        <div class="cbr-button-container">
+            <div class="ctrp-form-actions">
+                {{ form.compare_type_x(class="btn btn-primary") }}
+            </div>
+        </div>
+
+        <div class="cbr-button-container">
+            <div class="ctrp-form-actions">
+                {{ form.compare_type_y(class="btn btn-primary") }}
+            </div>
         </div>
     </form>
 </div>
