apply override to bootstrap .card so stacking behaves correctly (sub-menu to the front)

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -301,3 +301,8 @@ body {
     position: static !important;
     /* Remove stacking context */
 }
+
+/* override bootstrap card behaviour so Run Log doesn't render in front of our sub-menus */
+.card {
+    position: static !important;
+}
